crates/aranya-policy-compiler/tests/data/type_errors/match_option_mixed_types_invalid_type.fail.policy
action foo() {
    match None {
        Some(42) => {}
        Some("foo") => {}
        _ => {}
    }
}
